--- a/src/styles/_component.scss
+++ b/src/styles/_component.scss
@@ -57,28 +57,52 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: end;
-      height: 24rem;
+      height: 22rem;
       border-bottom: 0.1rem solid hsla(28, 10%, 53%, 0.205);
-      padding-bottom: 2.5rem;
+      padding: 2.5rem 0rem;
     }
   }
 
   &__item {
-    height: 100%;
+    height: 90%;
     width: 11%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: end;
+    position: relative;
+
+    &__label {
+      background-color: variables.$dark-brown;
+      font-size: 1.2rem;
+      color: variables.$very-pale-orange;
+      padding: 0.8rem 0.6rem;
+      border: none;
+      border-radius: 0.4rem;
+      font-weight: 700;
+      letter-spacing: 0.1rem;
+      position: absolute;
+    }
 
     &__bar {
-      height: 70%;
-      // width: 3.3rem;
+      height: 100%;
       width: 100%;
       background-color: variables.$soft-red;
       margin-bottom: 1.4rem;
-      border-radius: 0.3rem;
+      border-radius: 0.4rem;
       cursor: pointer;
+    }
+
+    &__bar:hover {
+      background-color: lighten(variables.$soft-red, 8%);
+    }
+
+    &__bar--today {
+      background-color: variables.$cyan;
+    }
+
+    &__bar--today:hover {
+      background-color: lighten(variables.$cyan, 8%);
     }
 
     &__day {
